<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="30dp"
    android:background="@drawable/background_radius_10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_password"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <EditText
        android:id="@+id/et_password"
        style="@style/customEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/warningPasswordTV"
        style="@style/errorTV"
        android:text="@string/password_not_allowed"
        android:visibility="gone"
        tools:ignore="InefficientWeight" />

    <EditText
        android:id="@+id/et_convirm_password"
        style="@style/customEditText"
        android:hint="@string/convirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/warningConfirmPasswordTV"
        style="@style/errorTV"
        android:text="@string/confirmation_password_not_may_kosong"
        android:visibility="gone"
        tools:ignore="InefficientWeight" />
</LinearLayout>