<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:background="@drawable/background_radius_top_10dp">

    <EditText
        android:id="@+id/et_email"
        style="@style/customEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_above="@id/et_password"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_password"
        style="@style/customEditText"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:layout_above="@+id/btn_login"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_above="@+id/registerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/registerTV"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="180dp"
        android:text="@string/dont_have_an_account_yet_register"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>