<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1F1C2D"
    tools:context=".ui.toup.TopUpAndTransferActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black_1E1B29"
        android:elevation="5dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/topup_nutech"
        android:textColor="@color/white_F3F3F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_arrow_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_title_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="140dp"
        android:text="@string/current_balance"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balanceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_balance"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:text="Rp.200" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balanceTV"
        android:layout_marginTop="15dp"
        android:text="@string/nominal_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_total"
        style="@style/customEditText"
        android:layout_below="@+id/tv_subtitle"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/rp"
        android:inputType="number"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/btn_custom"
        android:text="@string/transaction"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animateView"
        android:layout_below="@+id/et_total"
        android:layout_above="@+id/btn_transaction"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true"
        android:visibility="visible"
        app:lottie_rawRes="@raw/loading_animation" />
</RelativeLayout>